# quran-muaalem-Markineer-OneClick

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt  run.bat
backend/: main.py  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: audio-processor.js
frontend/src/: App.jsx
frontend/src/components/: AudioVisualizer.jsx  InkView.jsx
frontend/src/pages/: HarakatTrainer.jsx  HomePage.jsx  RealtimeTrainer.jsx  SettingsPage.jsx
frontend/src/styles/: globals.css
src/quran_muaalem/: __init__.py  decode.py  explain_html.py  harakat_mode.py  ink_render.py  realtime_harakat.py
src/quran_muaalem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
