[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quran-muaalem"
version = "1.0.0"
license = {text = "MIT"}
authors = [
  { name="Jyad", email="jyadoffiical@gmail.com" },
]
description = "Intelligent Quran Teacher - AI-powered recitation analyzer detecting pronunciation, tajweed, and harakat errors"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["quran", "tajweed", "arabic", "speech-recognition", "ai", "deep-learning", "harakat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "diff-match-patch>=20241021",
    "numpy>=2.0.0",
    "quran-transcript>=0.1.0",
    "rich>=13.0.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "librosa>=0.10.0",
    "numba>=0.58.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
]

[project.optional-dependencies]
streamlit = [
    "streamlit>=1.38.0",
    "streamlit-webrtc>=0.47.0",
    "av>=10.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/obadx/quran-muaalem"
Repository = "https://github.com/obadx/quran-muaalem"
Issues = "https://github.com/obadx/quran-muaalem/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
